--- a/sass/components/message.sass
+++ b/sass/components/message.sass
@@ -28,6 +28,7 @@ $message-colors: $colors !default
   --message-header-color: #{$message-header-color}
   --message-header-weight: #{$message-header-weight}
   --message-header-padding: #{$message-header-padding}
+  --message-header-radius: #{$message-header-radius}
   --message-body-border-color: #{$message-body-border-color}
   --message-body-radius: #{$message-body-radius}
   --message-body-border-width: #{$message-body-border-width}
@@ -86,7 +87,7 @@ $message-colors: $colors !default
 .message-header
   align-items: center
   background-color: var(--message-header-background-color)
-  border-radius: $message-header-radius $message-header-radius 0 0
+  border-radius: var(--message-header-radius) var(--message-header-radius) 0 0
   color: var(--message-header-color)
   display: flex
   font-weight: var(--message-header-weight)
