--- a/sass/themes/default.sass
+++ b/sass/themes/default.sass
@@ -89,6 +89,7 @@
   --scheme-invert-ter: #{$scheme-invert-ter}
   --background: #{$background}
   --border: #{$border}
+  --border-rgb: #{$border-rgb}
   --border-hover: #{$border-hover}
   --border-light: #{$border-light}
   --border-light-hover: #{$border-light-hover}
