--- a/sass/utilities/derived-variables.scss
+++ b/sass/utilities/derived-variables.scss
@@ -54,6 +54,7 @@ $scheme-invert-ter : var(--black-ter, #{$black-ter}) !default;
 $background        : var(--white-ter, #{$white-ter}) !default;
 
 $border            : var(--grey-lighter, #{$grey-lighter}) !default;
+$border-rgb        : bulmaToRGB($grey-lighter) !default;
 $border-hover      : var(--grey-light, #{$grey-light}) !default;
 $border-light      : var(--grey-lightest, #{$grey-lightest}) !default;
 $border-light-hover: var(--grey-light, #{$grey-light}) !default;
